2007-08-09 Jesus Calvino-Fraga <jesusc at ece.ubc.ca>

	* device/include/mcs51/at89c51ed.h: Fixed typo in declarations of CKCON0
	  and CKCON1.

2007-08-07 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* sdccconf_in.h: update the endian test so that SPARC Solaris
	  does not throw syntax errors

2007-08-06 Borut Razem <borut.razem AT siol.net>

	* doc/sdccman.lyx: removed two index entries which prevented the
	  generation of sdcc doc archive

2007-08-05 Jesus Calvino-Fraga <jesusc at ece.ubc.ca>

	* doc/sdccman.lyx: Same changes made 2007-07-28 but using lyx 1.4.4
	  instead of lyx 1.5.0.

2007-07-31 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* device/include/hc08/mc68hc908apxx.h: new header contributed by
	  Lucas Loizaga, with minor modifications. Thanks!

2007-07-28 Jesus Calvino-Fraga <jesusc at ece.ubc.ca>

	* doc/sdccman.lyx: Documented --acall-ajmp and described new features
	  in sdcclib.

2007-07-28 Jesus Calvino-Fraga <jesusc at ece.ubc.ca>

	* src/SDCCglobl.h, src/SDCCpeeph.c, src/SDCCglue.c, src/mcs51/main.c,
	  src/mcs51/peeph.def: Added option --acall-ajmp: replaces lcall/ljmp
	  with acall/ajmp.

2007-07-22 Borut Razem <borut.razem AT siol.net>

	* configure.in, configure: re-introduced .version
	* sdcc.spec, doc/INSTALL.txt: they are used only for releases;
	  the version reverted to 2.7.0

2007-07-18 Maarten Brock <sourceforge.brock AT dse.nl>

	* configure.in,
	* doc/sdccman.lyx: bumped version to 2.7.3
	* device/include/mcs51/compiler.h: fixed elif->else
	* src/mcs51/gen.c (genAnd, genOr): handle accuse for pure bit operands
	* src/mcs51/ralloc.c (createStackSpil): fixed SCLS bug with sloc for sbit,
	  (operandUsesAcc, packRegsForAccUse): added parameter allowBitspace to
	   enable accuse for bit operands
	* src/SDCCmain.c (printVersionInfo),
	* src/SDCCutil.c (getBuildEnvironment): factored out creation of build
	  environment descriptor
	* src/SDCCutil.h: added getBuildEnvironment